<resources>
    <string name="app_name">IIHT</string>
    <string name="action_settings">Settings</string>
    <string name="comp">Established in the year 1993, IIHT Ltd in Bhelupura, Varanasi is a top player in the category Computer Training Institutes in the Varanasi. This well-known establishment acts as a one-stop destination servicing customers both local and from other parts of Varanasi. Over the course of its journey, this business has established a firm foothold in it’s industry. The belief that customer satisfaction is as important as their products and services, have helped this establishment garner a vast base of customers, which continues to grow by the day. This business employs individuals that are dedicated towards their respective roles and put in a lot of effort to achieve the common vision and larger goals of the company. In the near future, this business aims to expand its line of products and services and cater to a larger client base. In Varanasi, this establishment occupies a prominent location in Bhelupura. It is an effortless task in commuting to this establishment as there are various modes of transport readily available. It is at Shakumbhari Complex, Near Chetmani Chauraha, which makes it easy for first-time visitors in locating this establishment. It is known to provide top service in the following categories: Computer Training Institutes, Tally Training Institutes, Computer Hardware Training Institutes, Ethical Hacking Training Institutes, CCNA Training Institutes, Computer Training Institutes For Java, Computer Training Institutes For CCC, Computer Software Training Institutes.</string>
    <string name="About_Us">About</string>
    <string name="Profile">Profile</string>
    <string name="Gallery">Gallery</string>
    <string name="Contact_Us">Contact Us</string>
    <string name="reg">Registration</string>
    <string name="rgister">rgister</string>
    <string name="register">register</string>
    <string name="cancel">cancel</string>
    <string name="Cancel">Cancel</string>
    <string name="Register">Registration</string>
    <string name="settingtext">The setting is both the time and geographic location within a narrative, either nonfiction or fiction. A literary element, the setting helps initiate the main backdrop and mood for a story. Setting has been referred to as story world or milieu to include a context beyond the immediate surroundings of the story.The setting of a piece of literature is the time and place in which the story takes place. The definition of setting can also include social statuses, weather, historical period, and details about immediate surroundings. Settings can be real or fictional, or a combination of both real and fictional elements.</string>
    <string name="about">Indian Institute of Hardware Technology is a Bangalore-based international IT talent transformation company. As an IT consulting and skill development services organization, IIHT offers various solutions pertaining to learning interface with the support of cloud and in-class infrastructureIIHT,established in the year 1993 as IT firm, is a leading IT training provider in the world. Having the world’s best “Techademy”, an online IT learning portal integrated with cloud labs, AI based Assignment and Assessment systems and coding labs, has unique programs mapped to job specific roles on all technology verticals like, Big Data, Cloud Computing, Artificial Intelligence and Machine Learning, Robotic Process Automation, Internet of Things, Block Chain Technologies, IT Security, IT Infrastructure Management Services, IT Process Management programs etc.,.Academic programs, Skill programs mapped to job specific roles and tailor made enterprise programs are delivered through 3 modes; Face to face, Virtual Live video streamed and recorded programs all integrated with cloud labs.</string>
    <string name="submit">submit</string>
    <string name="add1">Contact 1:IIHT Technologies #15, Sri Lakshmi Complex, St.Marks Road, Bangalore - 560 001 Tel : +91-80-6160 4545 Fax : +91-80-6606 8199 Email : support@iiht.net</string>
    <string name="add2">Contact 2:33 35, IInd Floor, Mall Road, Kingsway Camp, GTB Nagar, Near GTB Nagar Metro Station Gate No.2,Above Hundai Show Room Delhi</string>
    <string name="add3">Contact 3:IIHT, No: 15, 4th Floor, Sri Lakshmi Complex, Off MG Road, Near SBI LHO, Bangalore, Karnataka – 560001, India 1800-123-321-5 +91 9513072227 interest@iiht.com</string>
    <string name="add4">Contact 4:Office No 4,2nd Floor, Shakumbhari Complex, Durgakund Road,, Varanasi, Uttar Pradesh 221005 Phone: 098896 61212</string>
</resources>
