<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.iiht.MainActivity">
   <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/AboutUs"
        android:orderInCategory="100"
        android:title="@string/About_Us"
        app:showAsAction="never" />
    <item
        android:id="@+id/Profile"
        android:orderInCategory="100"
        android:title="@string/Profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/Gallery"
        android:orderInCategory="100"
        android:title="@string/Gallery"
        app:showAsAction="never" />
    <item
        android:id="@+id/contact"
        android:orderInCategory="100"
        android:title="@string/Contact_Us"
        app:showAsAction="never" />
</menu>
