<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".Contact">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add1"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/text31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text21"
            android:text="@string/add2"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/text41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text31"
            android:text="@string/add3"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/text51"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text41"
            android:text="@string/add4"
            android:textSize="25sp" />
    </RelativeLayout>
</ScrollView>